--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,4 +13,14 @@ a {
 
 * {
   box-sizing: border-box;
+  padding: 0;
+}
+
+ul {
+  list-style: none;
+}
+
+button {
+  border: 1px solid #ccc;
+  padding: 0.3em 0.8em;
 }
